Update license and requirements, add environment variables and refactor code

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-elevenlabs==0.2.27
-openai==1.13.3
-PyAudio
-rich
-setuptools
-SpeechRecognition
+elevenlabs==1.0.4
+openai==1.16.2
+PyAudio==0.2.14
+rich==13.7.1
+setuptools==69.0.3
+SpeechRecognition==3.10.3
