--- a/.env.template
+++ b/.env.template
@@ -1,11 +1,33 @@
-################################################################################
-### OpenAi API
-################################################################################
 
+OPENAI_SYSTEM_PROMPT="You are a helpful assistant."
+OPENAI_SYSTEM_PROMPT_WS="You are a helpful assistant."
+
+################################################################################
+### OpenAi API main.py
+################################################################################
 OPENAI_API_KEY=
+OPENAI_ORG_ID=
+OPENAI_MODEL=gpt-3.5-turbo-0125
+OPENAI_TEMP=0.5
+OPENAI_TOP_P=0.5
+MAX_TOKENS=128
+## elevenlabstts or pyttsx4
+TTS_PROVIDER=pyttsx4
+PYTTSX4_RATE=169
+PYTTSX4_VOLUME=1.0
+PYTTSX4_VOICE_ID=Microsoft Zira Desktop - English (United States)
 
 ################################################################################
-### ELEVENLABS API (You WILL NEED a paid plan for this to work!)
+### Azure OpenAI main_ws.py
+################################################################################
+
+AZURE_OPENAI_KEY=
+AZURE_API_VERSION=
+AZURE_OPENAI_ENDPOINT=
+AZURE_OPENAI_MODEL=
+
+################################################################################
+### ELEVENLABS API
 ## Eleven Labs Default Voice IDs
 ## Rachel : 21m00Tcm4TlvDq8ikWAM
 ## Domi : AZnzlk1XvdvUeBnXmlld
