Update requirements.txt and .env.template, and refactor config.py

--- a/.env.template
+++ b/.env.template
@@ -1,26 +1,16 @@
 
-OPENAI_SYSTEM_PROMPT="You are a helpful assistant."
-OPENAI_SYSTEM_PROMPT_WS="You are a helpful assistant."
-
 ################################################################################
-### OpenAi API main.py
+### OpenAi API for use with main.py
 ################################################################################
+OPENAI_SYSTEM_PROMPT=
 OPENAI_API_KEY=
 OPENAI_ORG_ID=
-OPENAI_MODEL=gpt-3.5-turbo-0125
-OPENAI_TEMP=0.5
-OPENAI_TOP_P=0.5
-MAX_TOKENS=128
-## elevenlabstts or pyttsx4
-TTS_PROVIDER=pyttsx4
-PYTTSX4_RATE=169
-PYTTSX4_VOLUME=1.0
-PYTTSX4_VOICE_ID=Microsoft Zira Desktop - English (United States)
+OPENAI_MODEL=
 
 ################################################################################
-### Azure OpenAI main_ws.py
+### Azure_OpenAI for use with main_ws.py
 ################################################################################
-
+AZURE_SYSTEM_PROMPT=
 AZURE_OPENAI_KEY=
 AZURE_API_VERSION=
 AZURE_OPENAI_ENDPOINT=
@@ -29,16 +19,7 @@ AZURE_OPENAI_MODEL=
 ################################################################################
 ### ELEVENLABS API
 ## Eleven Labs Default Voice IDs
-## Rachel : 21m00Tcm4TlvDq8ikWAM
-## Domi : AZnzlk1XvdvUeBnXmlld
-## Bella : EXAVITQu4vr4xnSDxMaL
-## Antoni : ErXwobaYiN019PkySvjV
-## Elli : MF3mGyEYCl7XYWbV9V6O
-## Josh : TxGEqnHWrfWFTfGW9XjX
-## Arnold : VR6AewLTigWG4xSOukaG
-## Adam : pNInz6obpgDQGcFmaJgB
-## Sam : yoZ06aMxZJJ28mfd3POQ
+## https://elevenlabs.io/docs/voicelab/pre-made-voices
 ################################################################################
-
 ELEVENLABS_API_KEY=
 ELEVENLABS_VOICE_ID=
