Update requirements.txt to include new dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-elevenlabs==1.0.5
-openai==1.16.2
-PyAudio==0.2.14
-rich==13.7.1
-setuptools==69.0.3
-SpeechRecognition==3.10.3
+elevenlabs>=1.0.5
+openai>=1.17.1
+PyAudio>=0.2.14
+rich>=13.7.1
+setuptools>=69.5.1
+SpeechRecognition>=3.10.3
+azure-cognitiveservices-speech>=1.37.0
