Update license and requirements, add environment variables and refactor code

--- a/.env.template
+++ b/.env.template
@@ -6,7 +6,6 @@ OPENAI_SYSTEM_PROMPT=
 OPENAI_API_KEY=
 OPENAI_ORG_ID=
 OPENAI_MODEL=
-
 ################################################################################
 ### Azure_OpenAI for use with main_ws.py
 ################################################################################
@@ -15,7 +14,8 @@ AZURE_OPENAI_KEY=
 AZURE_API_VERSION=
 AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_MODEL=
-
+AZUREAI_API_KEY=
+AZUREAI_REGION=
 ################################################################################
 ### ELEVENLABS API
 ## Eleven Labs Default Voice IDs
