Add OPENAI_PROJECT_ID to .env.template

--- a/.env.template
+++ b/.env.template
@@ -5,6 +5,7 @@
 OPENAI_SYSTEM_PROMPT=
 OPENAI_API_KEY=
 OPENAI_ORG_ID=
+OPENAI_PROJECT_ID=
 OPENAI_MODEL=
 ################################################################################
 ### Azure_OpenAI for use with main_ws.py
