--- a/.env.template
+++ b/.env.template
@@ -15,8 +15,8 @@ AZURE_OPENAI_KEY=
 AZURE_API_VERSION=
 AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_MODEL=
-AZUREAI_API_KEY=
-AZUREAI_REGION=
+SPEECH_KEY=
+SPEECH_REGION=
 ################################################################################
 ### ELEVENLABS API
 ## Eleven Labs Default Voice IDs
